# entity_system

./: .gitignore  BUILD  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake
examples/benchmark/: CMakeLists.txt  Components.h  Makefile  main.cpp
examples/starwarrior/: CMakeLists.txt  Components.h  EntityFactor.h  Makefile  Systems.h  main.cpp  test-sdl
include/: Component.h  ComponentManager.h  EntityManager.h  EntityProcessingSystem.h  EntitySystem.h  FastMath.h  IntervalEntitySystem.h  SystemManager.h  TagManager.h  Utils.h  World.h
src/: CMakeLists.txt  ComponentManager.cpp  EntityManager.cpp  EntityProcessingSystem.cpp  EntitySystem.cpp  Makefile  SystemManager.cpp  TagManager.cpp  World.cpp  cmake_install.cmake  main.cpp
