CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

PROJECT(entity_system)

IF (WIN32)
SET(CMAKE_DEBUG_POSTFIX  "d")
ENDIF (WIN32)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples/benchmark)
ADD_SUBDIRECTORY(examples/starwarrior)
