SET(LIB_NAME entity_system)

IF (WIN32)
ADD_DEFINITIONS(-DNOMINMAX)
ENDIF (WIN32)

SET(HEADER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../include)
SET(SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/../include
)

SET(LIB_PUBLIC_HEADERS
  ${HEADER_PATH}/Component.h
  ${HEADER_PATH}/EntityManager.h
  ${HEADER_PATH}/EntityProcessingSystem.h
  ${HEADER_PATH}/EntitySystem.h
  ${HEADER_PATH}/IntervalEntitySystem.h
  ${HEADER_PATH}/SystemManager.h
  ${HEADER_PATH}/TagManager.h
  ${HEADER_PATH}/World.h

)

SET(LIB_SOURCES
  ${SOURCE_PATH}/EntityManager.cpp
  ${SOURCE_PATH}/EntityProcessingSystem.cpp
  ${SOURCE_PATH}/EntitySystem.cpp
  ${SOURCE_PATH}/SystemManager.cpp
  ${SOURCE_PATH}/TagManager.cpp
  ${SOURCE_PATH}/World.cpp
)

ADD_LIBRARY(${LIB_NAME} SHARED
    ${LIB_PUBLIC_HEADERS}
    ${LIB_SOURCES}
)

IF (MSVC)
   install(TARGETS ${LIB_NAME}
      ARCHIVE
      DESTINATION lib
      COMPONENT libs
   )
   install(TARGETS ${LIB_NAME}
      RUNTIME
      DESTINATION bin
      COMPONENT application
   )
ENDIF (MSVC)

IF (MSVC_IDE)
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
ENDIF (MSVC_IDE)
