SET(APP_NAME starwarrior)

IF (WIN32)
ADD_DEFINITIONS(-DNOMINMAX)
ENDIF (WIN32)

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
if(NOT SDL_FOUND )
  message(FATAL_ERROR "SDL not found!")
endif ( NOT SDL_FOUND )

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/../../include/
)

SET(APP_HEADERS
  Components.h
  Systems.h
  EntityFactory.h
)

SET(APP_SOURCES
  main.cpp
)

ADD_EXECUTABLE(${APP_NAME}
  ${APP_SOURCES}
)

TARGET_LINK_LIBRARIES(${APP_NAME} entity_system
 		      ${SDL_LIBRARY}
                      SDLmain
)

IF (MSVC_IDE)
  SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES IMPORT_PREFIX "../")
  SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
ENDIF (MSVC_IDE)
